@@ -149,3 +149,63 @@ class StringTest(UnitTest):
 
     def testCenter(self):
         self.assertEqual('a'.center(4, '1'), '1a11')
+
+    def testSprintfList(self):
+        self.assertEqual("%s" % 'foo', "foo")
+        self.assertEqual("%% %s" % '', "% ")
+        self.assertEqual("[%% %s]" % '', "[% ]")
+        self.assertEqual("[%c]" % 0x20, '[ ]')
+        self.assertEqual("[%r]" % 11, "[11]")
+        self.assertEqual("[%s]" % 11, "[11]")
+        self.assertEqual("[%d]" % 11, "[11]")
+        self.assertEqual("[%i]" % 11, "[11]")
+        self.assertEqual("[%u]" % 11, "[11]")
+        self.assertEqual("[%e]" % 11, "[1.100000e+01]")
+        self.assertEqual("[%E]" % 11, "[1.100000E+01]")
+        self.assertEqual("[%f]" % 11, "[11.000000]")
+        self.assertEqual("[%F]" % 11, "[11.000000]")
+        self.assertEqual("[%g]" % 11, "[11]")
+        self.assertEqual("[%G]" % 11, "[11]")
+        self.assertEqual("[%o]" % 11, "[13]")
+        self.assertEqual("[%x]" % 11, "[b]")
+        self.assertEqual("[%X]" % 11, "[B]")
+        self.assertEqual("%*g,%10f" % (6, 1.234, 1.234), " 1.234,  1.234000")
+        self.assertEqual("%0*g,%010f" % (6, 1.234, 1.234), "01.234,001.234000")
+        self.assertEqual("[%04x]" % 1234, "[04d2]")
+        # FIXME: Next line fails. Slightly different output.
+        #self.assertEqual("[%g,%g,%g,%g,%g]" % (1.234567, 123456.7, 1234567, 0.0001234, 0.00001234), "[1.23457,123457,1.23457e+06,0.0001234,1.234e-05]")
+        self.assertEqual("[%3% %s]" % 'a', "[  % a]")
+
+        try:
+            s = "%*g,%10f" % (1, 2)
+            self.fail('Failed to raise error for "%*g,%10f" % (1, 2)')
+        except TypeError, e:
+            self.assertEqual(str(e), "not enough arguments for format string")
+        try:
+            s = "%*g,%10f" % (1, 2, 3, 4)
+            self.fail('Failed to raise error for "%*g,%10f" % (1, 2, 3, 4)')
+        except TypeError, e:
+            self.assertEqual(str(e), "not all arguments converted during string formatting")
+
+    def testSprintfDict(self):
+        testdict = {'s1': 'string',
+                    's2': 'another string',
+                    'v0': 0,
+                    'v1': 1,
+                    'v2': 1.234,
+                   }
+        self.assertEqual("[%(v1)12s|%(v1)-12s]" % testdict, '[           1|1           ]')
+        self.assertEqual("[%(v1)012o|%(v1)-012o]" % testdict, '[000000000001|1           ]')
+        self.assertEqual("[%(v1)#012o|%(v1)#-012o]" % testdict, '[000000000001|01          ]')
+        self.assertEqual("[%(v0)#012o|%(v0)#-012o]" % testdict, '[000000000000|0           ]')
+        self.assertEqual("[%(v1)#012x|%(v1)#-012x]" % testdict, '[0x0000000001|0x1         ]')
+        self.assertEqual("%(s1)3% %(s1)s" % testdict, '  % string')
+        #FIXME: next line failes, since it's a mixture of Dict/Tuple format
+        #self.assertEqual("%3% %(s1)s" % testdict, '  % string')
+        self.assertEqual("%(v1)#g" % testdict, '1.00000')
+
+        try:
+            s = "%(not-there)s" % testdict
+            self.fail('Failed to raise error for "%(not-there)s" % testdict')
+        except KeyError, e:
+            self.assertEqual(str(e), "'not-there'")
